--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Too Many Webrings!
-email: bite-me@toomanybees.com
 description: >- # this means to ignore newlines until "baseurl:"
   A prototype for a GitHub Pages-based static web ring!
 baseurl: /ring # For GitHub Pages's default url, this is the name of your repo
-url: https://toomanybees.github.io
+url: https://nanufucker.github.io
 
 # Build settings
 markdown: kramdown
@@ -54,5 +53,5 @@ defaults:
 
 # Webring contribution
 
-repository: https://github.com/TooManyBees/ring
-new_site_url: https://github.com/TooManyBees/ring/new/master/_websites
+repository: https://github.com/nanufucker/tfering-jekyll
+new_site_url: https://github.com/nanufucker/tfering-jekyll/new/master/_websites
