--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ url: https://nanufucker.github.io
 
 # Build settings
 markdown: kramdown
-remote-theme: riggraz/no-style-please
+remote_theme: riggraz/no-style-please
 # plugins:
 #   - jekyll-feed
 
